Fix spacer covering content

--- a/src/components/styles/content.css
+++ b/src/components/styles/content.css
@@ -5,7 +5,8 @@
 }
 
 .content-title-box {
-  background-color: rgba(228, 255, 47, 1);
+  background: linear-gradient(103deg, #fffa00, #02ff00, #00f2ff, #e3ff00);  background-size: 800% 800%;
+  animation: TitileBoxGradientAnim 32s ease infinite;
   clip-path: polygon(50% 10%, 90% 10%, 90% 19%, 80% 64%, 38% 90%, 10% 90%, 15% 44%, 33% 15%);
   width: 33vw;
   height: 100vh;
@@ -37,6 +38,7 @@
   display:table-cell; /*acts like a table cell*/
   vertical-align: middle;
   color: #FF9EC2;
+  letter-spacing: 10px;
 }
 
 .content-text {
@@ -62,4 +64,10 @@
     width: 100%;
     height: 80vh;
   }
+}
+
+@keyframes TitileBoxGradientAnim { 
+  0%{background-position:0% 19%}
+  50%{background-position:100% 82%}
+  100%{background-position:0% 19%}
 }
