--- a/src/components/styles/spacer.css
+++ b/src/components/styles/spacer.css
@@ -1,3 +1,7 @@
+.spanner-container {
+  height: 75px;
+}
+
 .marquee {
   margin: 0 auto;
   width: 100%;
